--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "cleanup-local-branches",
   "version": "0.0.1",
   "description": "CLI to remove local branches that are not in remote branches",
-  "main": "index.ts",
+  "main": "./dist/index",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -",
+    "dev": "tsc -W",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,13 +24,18 @@
   },
   "homepage": "https://github.com/maafaishal/cleanup-local-branches#readme",
   "bin": {
-    "cleanup-local-branches": "./dist/index.js"
+    "cleanup-local-branches": "./dist/index"
   },
   "devDependencies": {
+    "@types/node": "^16.18.12",
+    "@types/prompts": "^2.4.2",
+    "@types/yargs": "^17.0.22",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "ora": "^5.4.1",
     "picocolors": "^1.0.0",
+    "prompts": "^2.4.2",
     "yargs": "^17.6.2"
   }
 }
