--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "target": "es5",
-    "module": "commonjs",
+    "module": "CommonJS",
     "declaration": true,
     "outDir": "./dist",
     "strict": true
