chore: package json publish

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "cleanup-local-branches",
-  "version": "0.0.1-beta.4",
+  "version": "0.0.1-beta.7",
   "description": "CLI to remove local branches that are not in remote branches",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc -W",
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build && cp -r ./dist/* . && rm -rf ./dist",
+    "postpublish": "git clean -fd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,10 +27,12 @@
   },
   "homepage": "https://github.com/maafaishal/cleanup-local-branches#readme",
   "bin": {
-    "cleanup-local-branches": "./dist/index.js"
+    "cleanup-local-branches": "./index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "index.js",
+    "index.d.ts"
   ],
   "devDependencies": {
     "@types/node": "^16.18.12",
